data/derived/comb/progs/unify/prog0343.ml.out
Characters 88-90:
  | Average (x', y') -> (x'+y')/2;;
                         ^^
Error: This expression has type expr but an expression was expected of type
         int
